--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-with-firebase-auth": "^1.3.2",
+    "socket.io": "^3.0.5",
+    "socket.io-client": "^3.0.5",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
@@ -43,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/socket.io-client": "^1.4.35"
   }
 }
