--- a/client/src/FireBase/config.json
+++ b/client/src/FireBase/config.json
@@ -1,9 +1,9 @@
 {
-    "api_key": "AIzaSyCvCl0UhE0hDCDsCb2P-pSTg5YDR1ZdQjo",
+    "api_key": "AIzaSyAsejsuD4rrNmrqDNfwp5e9yncNPrVA_eo",
     "auth_domain": "quickstart-1594476482074.firebaseapp.com",
-    "database_url": "https://quickstart-1594476482074-default-rtdb.firebaseio.com",
-    "project_id": "quickstart-1594476482074",
-    "storage_bucket": "quickstart-1594476482074.appspot.com",
-    "messaging_sender_id": "501157955175",
-    "app_id": "1:501157955175:web:3ab58b108029f1148fb6c2"
+    "database_url": "https://booming-pride-283013-default-rtdb.firebaseio.com",
+    "project_id": "booming-pride-283013",
+    "storage_bucket": "booming-pride-283013.appspot.com",
+    "messaging_sender_id": "697026324367",
+    "app_id": "1:697026324367:web:1ebb07484cc3e631824dfa"
 }
