--- a/client/src/FireBase/config.json
+++ b/client/src/FireBase/config.json
@@ -1,6 +1,6 @@
 {
     "api_key": "AIzaSyAsejsuD4rrNmrqDNfwp5e9yncNPrVA_eo",
-    "auth_domain": "quickstart-1594476482074.firebaseapp.com",
+    "auth_domain": "booming-pride-283013.firebaseapp.com",
     "database_url": "https://booming-pride-283013-default-rtdb.firebaseio.com",
     "project_id": "booming-pride-283013",
     "storage_bucket": "booming-pride-283013.appspot.com",
