--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router-dom": "^5.1.7",
     "firebase": "^8.2.1",
+    "firebase-tools": "^9.3.0",
     "react": "^17.0.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
