--- a/client/package.json
+++ b/client/package.json
@@ -17,9 +17,12 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "@types/react-router-dom": "^5.1.7",
+    "datatables.net": "^1.10.24",
+    "datatables.net-bs": "^1.10.24",
+    "datatables.net-dt": "^1.10.24",
     "firebase": "^8.2.1",
     "firebase-tools": "^9.3.0",
-    "loadjs": "^4.2.0",
+    "jquery": "^3.2.1",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-cookie": "^4.0.3",
@@ -27,6 +30,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-with-firebase-auth": "^1.3.2",
+    "save-dev": "0.0.1-security",
     "socket.io": "^3.0.5",
     "socket.io-client": "^3.0.5",
     "typescript": "^4.1.3",
