--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,9 @@
     "@fullcalendar/list": "^5.5.0",
     "@fullcalendar/react": "^5.5.0",
     "@fullcalendar/timegrid": "^5.5.1",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.22",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
@@ -17,18 +20,20 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "@types/react-router-dom": "^5.1.7",
-    "datatables.net": "^1.10.24",
-    "datatables.net-bs": "^1.10.24",
-    "datatables.net-dt": "^1.10.24",
+    "datatables.net": "^1.10.12",
+    "datatables.net-bs": "^1.10.12",
+    "datatables.net-dt": "^1.10.12",
     "firebase": "^8.2.1",
     "firebase-tools": "^9.3.0",
     "jquery": "^3.2.1",
+    "material-table": "^1.69.2",
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-toastify": "^7.0.3",
     "react-with-firebase-auth": "^1.3.2",
     "save-dev": "0.0.1-security",
     "socket.io": "^3.0.5",
