--- a/client/package.json
+++ b/client/package.json
@@ -39,7 +39,8 @@
     "socket.io": "^3.0.5",
     "socket.io-client": "^3.0.5",
     "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "xlsx": "^0.16.9"
   },
   "scripts": {
     "start": "react-scripts start",
