--- a/client/package.json
+++ b/client/package.json
@@ -35,12 +35,15 @@
     "react-scripts": "4.0.1",
     "react-toastify": "^7.0.3",
     "react-with-firebase-auth": "^1.3.2",
+    "recharts-to-png": "^1.0.0",
     "save-dev": "0.0.1-security",
     "socket.io": "^3.0.5",
     "socket.io-client": "^3.0.5",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
-    "xlsx": "^0.16.9"
+    "xlsx": "^0.16.9",
+    "file-saver": "2.0.2",
+    "recharts": "2.0.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -67,6 +70,7 @@
     ]
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.2",
     "@types/socket.io-client": "^1.4.35"
   }
 }
