--- a/client/package.json
+++ b/client/package.json
@@ -30,20 +30,20 @@
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-cookie": "^4.0.3",
+    "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-toastify": "^7.0.3",
     "react-with-firebase-auth": "^1.3.2",
+    "recharts": "2.0.9",
     "recharts-to-png": "^1.0.0",
     "save-dev": "0.0.1-security",
     "socket.io": "^3.0.5",
     "socket.io-client": "^3.0.5",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
-    "xlsx": "^0.16.9",
-    "file-saver": "2.0.2",
-    "recharts": "2.0.9"
+    "xlsx": "^0.16.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -71,6 +71,7 @@
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.2",
+    "@types/react-datepicker": "^3.1.8",
     "@types/socket.io-client": "^1.4.35"
   }
 }
